--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 .gradle
 build/
 
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
 # Ignore Gradle GUI config
 gradle-app.setting
 
